// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`setCurrentPhraseID creates the correct payload 1`] = `
{
  "payload": "II/1",
  "type": "SET_CURRENT_PHRASE_ID",
}
`;

exports[`setCurrentTime creates the correct payload 1`] = `
{
  "payload": 30,
  "type": "SET_CURRENT_TIME",
}
`;

exports[`setNarrativeTab creates the correct payload 1`] = `
{
  "payload": 1,
  "type": "SET_NARRATIVE_TAB",
}
`;

exports[`setScoreToggles creates the correct payload 1`] = `
{
  "payload": {
    "isBeatOn": false,
    "isTextOn": false,
  },
  "type": "SET_SCORE_TOGGLES",
}
`;

exports[`setStartTime creates the correct payload 1`] = `
{
  "payload": 30,
  "type": "SET_START_TIME",
}
`;
